# Agentic-AI-projects

./: .gitignore  app.py  export_chat.py  requirements.txt
agentic-ai-assistant/: README.md  app.py  export_chat.py  sidebar.py  todo.md
agentic-ai-assistant/multimodal/: image_processing.py
agentic-ai-assistant/rag/: file_uploader.py  retriever.py  text_splitter.py
agentic-ai-assistant/tools/: calculator.py  date.py  image_tools.py  wikipedia_search.py
ai-developer-assistant/: todo.md
ai-developer-assistant/agent/: executor_agent.py  orchestrator.py  planner_agent.py  reflection_agent.py  workspace_agent.py
ai-developer-assistant/prompts/: planner_agent.md  prompt_reader.py  reflection_agent.md
ai-developer-assistant/server/: filesystem_server.py  git_server.py  shell_server.py
ai-developer-assistant/snake_game/: main.py
ai-resume-interview-agent/: app.py  requirements.txt  todo.md
multi-agent-research-system/: agents.py  app.py  pipeline.py  tools.py
rag/: file_uploader.py  vector_store.py
realtime-voice-search/: .env  main.py  pyproject.toml
telecaller-sales-agent/: README.md  pyproject.toml  todo.md
telecaller-sales-agent/sales-agent/: .env.example  agent.py  rag.py  summary.py
telecaller-sales-agent/sales-agent/db/: sales.db  sqlitedb.py
telecaller-sales-agent/sales-agent/knowledge/: company_policy.md
tools/: agent.py  url_scraper.py  weather_search.py  web_search.py
youtube-video-summarizer-agent/: main.py  processor.py  prompts.py  youtube.py
youtube-video-summarizer-chain/: app.py
(+11 files in other folders)
